[metadata]
name = wfraven
version = attr: wfraven.__version__
author = Waterfall contributors
author_email = replaceme@example.com
description = Waterfall's media transcoder backend
long_description = file: README.md
long_description_content_type=text/markdown
url = https://github.com/u1f408/wfraven
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License

[options]
include_package_data = False
packages = find:

python_requires = >=3.8
install_requires =
    Flask==1.1.2
    waitress==1.4.4
    toml==0.10.2
    psycopg2==2.8.6
    psutil==5.7.2
    Pillow==8.1.2
    sentry-sdk==0.19.0

[options.extras_require]
build =
    bork==6.0.0b1
    pip==21.0.1
    setuptools==54.1.2
    wheel==0.36.2

[options.entry_points]
console_scripts =
    wfraven = wfraven.cli:main

[bdist]
bdist_base = build/bdist

[clean]
build_base = build
build_lib  = build/lib
bdist_base = build/bdist
all = True

[bork]
zipapp_main = wfraven.cli:main
